--- a/backend/.env
+++ b/backend/.env
@@ -1,29 +1,26 @@
 # ============================================
-# CHILIX - VARIABLES DE ENTORNO
+# CONFIGURACIÓN DE LA BASE DE DATOS (AIVEN)
 # ============================================
-
-# Puerto del servidor
-PORT=3000
-
-# Configuración de MySQL
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
+DB_HOST=chilix-db-davher108-11bc.i.aivencloud.com
+DB_PORT=13663
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_qI2juh213hL6skw4nsp
 DB_NAME=chilix_db
-DB_PORT=3307
 
-# JWT Secret (cambiar en producción)
-JWT_SECRET=chilix_secret_key_2025_cecyt8_david_velazquez_super_seguro
-
-# Entorno (development, production)
+# ============================================
+# CONFIGURACIÓN DEL SERVIDOR
+# ============================================
+PORT=3000
 NODE_ENV=development
 
-# CORS Origins permitidos
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5500,http://127.0.0.1:5500
-
-# Rate limiting
+# ============================================
+# CONFIGURACIÓN DE SEGURIDAD
+# ============================================
+JWT_SECRET=tu-secreto-super-seguro-12345
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Sesión
-SESSION_EXPIRY_HOURS=24
+# ============================================
+# CORS (Orígenes permitidos)
+# ============================================
+ALLOWED_ORIGINS=http://localhost:5500,http://localhost:3000,http://127.0.0.1:5500,https://chilix-snacks.vercel.app
